<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.turgutcanozdemir.android.app.geonames.countrysearch.viewmodel.CountryDetailsActivityViewModel"/>
        <variable name="viewModel" type="CountryDetailsActivityViewModel" />
        <variable name="link" type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CountryDetailsActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/textview_country_text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.country.countryName}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/textview_capital_text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.country.capital}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/textview_continent_text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.country.continentName}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/textview_languages_text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.country.languages}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/textview_population_text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.country.population}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/textview_currency_text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.country.currencyCode}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/textview_wiki_link_text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{link}"
                android:linksClickable="true"
                android:autoLink="web"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_exit_text"
            android:onClick="@{() -> viewModel.handleExitButtonClick()}"/>
    </LinearLayout>
</layout>
